--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "playwright": "^1.51.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@types/node": "^22.14.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
