--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "main": "index.js",
   "scripts": {
     "open:runner": "npx playwright test --ui",
-    "open:report": "npx playwright show-report"
+    "report:generate": "allure serve allure-results"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@playwright/test": "^1.51.1",
     "playwright": "^1.51.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.7.0",
+    "@playwright/test": "^1.52.0",
     "@types/node": "^22.14.0",
+    "allure-playwright": "^3.2.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
